# mcg

./: .gitignore  README.md  main.py  pyproject.toml
.deployment/: autodl.py  convert_imagenet.py
configs/: mcg_attack.yaml
scripts/: cifar10_attack_untargeted.sh  imagenet_attack_untargeted.sh  imagenet_metatrain.sh  imagenet_pretrain.sh
src/mcg/: config.py
src/mcg/domain/: __init__.py  attack.py  interfaces.py
src/mcg/domain/services/: stats.py
src/mcg/infrastructure/: __init__.py  components.py
utils/: load_models.py
